# telling

./: .gitignore  CMakeLists.txt  README.md  telling-config.cmake.in  vcpkg.json
include/telling/: afar.h  async.h  async_loop.h  async_query.h  async_queue.h  client.h  client_base.h  client_push.h  client_request.h  client_subscribe.h  deposit.h  host_address.h  http.h  http_client.h  io_queue.h  msg.h  msg_headers.h  msg_layout.h  msg_method.h  msg_protocol.h  msg_status.h  msg_stream.h  msg_uri.h  msg_util.h  msg_view.h  msg_writer.h  pattern.h  server.h  service.h  service_base.h  service_enlist.h  service_publish.h  service_pull.h  service_reactor.h  service_registration.h  service_reply.h  socket.h
include/telling/util/: HttpStatusCodes_C++11.h
include/telling_jsonapi/: service.h
src/: client.cpp  client_request.cpp  client_subscribe.cpp  communicator.cpp  msg_view.cpp  msg_writer.cpp  server.cpp  server_publish.cpp  server_pull.cpp  server_reply.cpp  server_services.cpp  service.cpp  service_enlist.cpp  service_registration.cpp  service_reply.cpp  socket.cpp
src/telling/: client.cpp  client_request.cpp  client_subscribe.cpp  http.cpp  http_client.cpp  msg.cpp  msg_util.cpp  msg_view.cpp  msg_writer.cpp  server.cpp  server_publish.cpp  server_pull.cpp  server_reply.cpp  server_services.cpp  service.cpp  service_reactor.cpp  service_registration.cpp  service_reply.cpp  socket.cpp
test/: main.cpp  test_polling_service.cpp  test_service.h
vcpkg_ports/nngpp/: portfile.cmake  vcpkg.json
visualstudio/: telling.sln
visualstudio/telling/: telling.vcxproj  telling.vcxproj.filters  weak_anchor.h
visualstudio/telling_jsonapi/: telling_jsonapi.vcxproj  telling_jsonapi.vcxproj.filters
visualstudio/test/: http_request.txt  test.vcxproj  test.vcxproj.filters
